tests/wordpress/fail/plugins/lanoba-social/index.php
<?php
/*
  Plugin Name: Lanoba Social Plugin
  Plugin URI: http://www.lanoba.com/
  Description: Provides authentication, registration and social sharing capabilities through the Lanoba Social API.
  Version: 1.0
  Author: Lanoba
  Author URI: http://www.lanoba.com/
  License: GPL2
 */
